--- a/app/src/main/res/layout/activity_monster_viewer.xml
+++ b/app/src/main/res/layout/activity_monster_viewer.xml
@@ -212,6 +212,13 @@
             android:background="@null"
             android:layout_gravity="center"/>
 
+        <Button
+            android:id="@+id/facebook_invite_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Facebook Invite" />
+
     </LinearLayout>
     
 </RelativeLayout>
